# WordToLatex

./: .gitignore  README.md  gui.py  pyproject.toml  requirements.txt  start_gui.sh  test_documento.docx  test_notebook.ipynb
output/: test_documento.tex
wordtolatex/: __init__.py  __main__.py  compiler.py  converter.py  gui.py  latex_generator.py  parser.py
